<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">

    <LinearLayout
        android:id="@+id/introduction"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="32dp"
        android:paddingTop="32dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:fontFamily="@font/open_sans_semibold"
                android:textAllCaps="true"
                android:letterSpacing="0.7"
                android:text="@string/the"/>

            <TextView
                android:id="@+id/drinking_game_title_text"
                style="@style/ImportantTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/playfair_display_bold"
                android:text="@string/hottest_games_title"
                android:textAlignment="center"
                android:textSize="38sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/open_sans_semibold"
            android:textAllCaps="true"
            android:letterSpacing="0.3"
            android:textAlignment="center"
            android:text="@string/people_have_spoken"/>

        <TextView
            style="@style/LabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hottest_games_description" />
    </LinearLayout>

</RelativeLayout>