<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="48dp"
    android:paddingBottom="16dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/drinking_game_rating_title"
        style="@style/ImportantTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/share_title"
        android:textAlignment="center"
        android:textSize="26sp" />

    <TextView
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/share_text" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:fontFamily="@font/open_sans_semibold"
        android:drawableLeft="@drawable/ic_share_black_24dp"
        android:drawableTint="@android:color/white"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/share_game_button"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>