<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp">

    <LinearLayout
        android:id="@+id/introduction"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle_top"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="48dp"
        android:paddingTop="48dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:fontFamily="@font/open_sans_semibold"
                android:textAllCaps="true"
                android:letterSpacing="0.7"
                android:text="@string/the"/>

            <TextView
                android:id="@+id/drinking_game_title_text"
                style="@style/ImportantTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/playfair_display_bold"
                android:text="@string/movie_title"
                android:textAlignment="center"
                android:textSize="38sp" />

            <TextView
                android:id="@+id/drinking_game_subtitle_text"
                style="@style/ImportantTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/playfair_display_bold"
                android:text="drinking game"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/movie_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/LighterLabelStyle"
                    android:textSize="14sp"
                    android:text="1h 45min"
                    android:layout_weight="1"
                    android:layout_marginRight="25dp"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:tint="@color/colorSecondaryText"
                    android:src="@drawable/ic_star_black_24dp" />

                <TextView
                    android:id="@+id/game_players"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/LighterLabelStyle"
                    android:textSize="14sp"
                    android:text="12 players"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:layout_marginLeft="25dp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/open_sans_semibold"
            android:textAllCaps="true"
            android:letterSpacing="0.7"
            android:text="@string/rules_title"/>

        <TextView
            style="@style/LabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rules_text" />
    </LinearLayout>

</RelativeLayout>